# cathook

./: install-tf2
include/hooks/: ClassIdTranslator.hpp  ClassInfoEndClasses.hpp
src/: CMakeLists.txt  EnginePatches.cpp  HostError.cpp  hack.cpp
src/hooks/: CMakeLists.txt  ClassIdTranslator.cpp  ClassInfoEndClasses.cpp  EmbeddedClassInfo.tpl.cpp  ParsePacketEntities.cpp
src/hooks/txt/: x32clientparsepacketent  x32parseclassinfo  x64clientparsepacketent  x64parseclassinfo
